使用flex完成大概布局

--- a/colorBox.html
+++ b/colorBox.html
@@ -3,25 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <title>选色板</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/colorBox.css">
 </head>
 <body>
-<div class="box">
-    <div class="colors">
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
+<div class="content">
+    <div class="box-top">
+        <h1>Welcome!  Liou's Color World!</h1>
     </div>
-    <div class="colors">
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
-        <div class="box1">copy</div>
+    <div class="box-content">
+        <div class="colors">
+            <div class="box-in" style="background: #ff5252">a</div>
+            <div class="box-in" style="background: #ff6e40">b</div>
+            <div class="box-in" style="background: #ffd740">c</div>
+            <div class="box-in" style="background: #8bc34a">d</div>
+            <div class="box-in" style="background: #6699CC">e</div>
+        </div>
+        <div class="colors">
+            <div class="box-in" style="background: #E881F5">1</div>
+            <div class="box-in" style="background: #d500f9">2</div>
+            <div class="box-in" style="background: #ab47bc">3</div>
+            <div class="box-in" style="background: #673ab7">4</div>
+            <div class="box-in" style="background: #7e57c2">5</div>
+        </div>
+        <div class="colors">
+            <div class="box-in" style="background: #8d6e63">1</div>
+            <div class="box-in" style="background: #6d4c41">2</div>
+            <div class="box-in" style="background: #5d4037">3</div>
+            <div class="box-in" style="background: #4e342e">4</div>
+            <div class="box-in" style="background: #3e2723">5</div>
+        </div>
+        <div class="colors">
+            <div class="box-in" style="background: #e57373">1</div>
+            <div class="box-in" style="background: #e53935">2</div>
+            <div class="box-in" style="background: #c62828">3</div>
+            <div class="box-in" style="background: #ff5252">4</div>
+            <div class="box-in" style="background: #d50000">5</div>
+        </div>
+        <div class="colors">
+            <div class="box-in" style="background: #FFA000">1</div>
+            <div class="box-in" style="background: #FFEB3B">2</div>
+            <div class="box-in" style="background: #CDDC39">3</div>
+            <div class="box-in" style="background: #8BC34A">4</div>
+            <div class="box-in" style="background: #4CAF50">5</div>
+        </div><div class="colors">
+        <div class="box-in" style="background: #7e57c2">1</div>
+        <div class="box-in" style="background: #651fff">2</div>
+        <div class="box-in" style="background: #4a148c">3</div>
+        <div class="box-in" style="background: #673ab7">4</div>
+        <div class="box-in" style="background: #512da8">5</div>
+    </div><div class="colors">
+        <div class="box-in" style="background: #CFD8DC">1</div>
+        <div class="box-in" style="background: #607D8B">2</div>
+        <div class="box-in" style="background: #607D8B">3</div>
+        <div class="box-in" style="background: #455A64">4</div>
+        <div class="box-in" style="background: #36444d">5</div>
+    </div><div class="colors">
+        <div class="box-in" style="background: #aed581">1</div>
+        <div class="box-in" style="background: #8bc34a">2</div>
+        <div class="box-in" style="background: #558b2f">3</div>
+        <div class="box-in" style="background: #43a047">4</div>
+        <div class="box-in" style="background: #1b5e20">5</div>
+    </div><div class="colors">
+        <div class="box-in" style="background: #ffc107">1</div>
+        <div class="box-in" style="background: #d84315">2</div>
+        <div class="box-in" style="background: #ef6c00">3</div>
+        <div class="box-in" style="background: #ffab00">4</div>
+        <div class="box-in" style="background: #ff3d00">5</div>
+    </div><div class="colors">
+        <div class="box-in" style="background: #d4e157">1</div>
+        <div class="box-in" style="background: #9ccc65">2</div>
+        <div class="box-in" style="background: #66bb6a">3</div>
+        <div class="box-in" style="background: #b2ff59">4</div>
+        <div class="box-in" style="background: #388e3c">5</div>
+    </div><div class="colors">
+        <div class="box-in" style="background: #6699CC">1</div>
+        <div class="box-in" style="background: #6666CC">2</div>
+        <div class="box-in" style="background: #669999">3</div>
+        <div class="box-in" style="background: #336699">4</div>
+        <div class="box-in" style="background: #003366">5</div>
+    </div><div class="colors">
+        <div class="box-in" style="background: #FFFF66">1</div>
+        <div class="box-in" style="background: #FFCC33">2</div>
+        <div class="box-in" style="background: #FFFF00">3</div>
+        <div class="box-in" style="background: #FF9900">4</div>
+        <div class="box-in" style="background: #CCCC00">5</div>
     </div>
-
+    </div>
 </div>
+
 </body>
 </html>
